# toy-model-api

./: .gitignore  README.md  infracost_test.tf  ingest_hmda.py  main.py  predict.py  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: deploy-model.yml  pylint.yml  register-model.yml
.infracost/: pricing.gob
.infracost/terraform_modules/: manifest.json
mlartifacts/0/106c7851906b469590ddf93c5dae85d3/artifacts/toy_model/: MLmodel
mlruns/0/: meta.yaml
mlruns/0/0658601f28104bdabb5986b8e4f4939c/: meta.yaml
mlruns/0/0658601f28104bdabb5986b8e4f4939c/tags/: mlflow.runName
mlruns/0/106c7851906b469590ddf93c5dae85d3/: meta.yaml
mlruns/0/106c7851906b469590ddf93c5dae85d3/metrics/: mse
mlruns/0/106c7851906b469590ddf93c5dae85d3/tags/: mlflow.log-model.history  mlflow.source.name
mlruns/0/fb315d939799494782667569ceef5f81/: meta.yaml
mlruns/models/Toy Model/: meta.yaml
mlruns/models/Toy Model/version-1/: meta.yaml
mlruns/models/Toy Model/version-2/: meta.yaml
model/: train_model.py
terraform/: main.tf
toy_model/: MLmodel  conda.yaml  requirements.txt
