[tool.poetry]
name = "toy-model-api"
version = "0.1.0"
description = ""
authors = ["Nathan Bick <nathankbick1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
mlflow = "^2.10.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
azure-ai-ml = "^1.13.0"
azureml-mlflow = "^1.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
