[tool.poetry]
name = "toy-model-api"
version = "0.1.0"
description = ""
authors = ["Nathan Bick <nathankbick1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
mlflow = "^2.12.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
azure-ai-ml = "^1.16.1"
azureml-mlflow = "^1.55.0"
azureml = "^0.2.7"
azureml-core = "^1.55.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
